# multi-agent-news-summarizer-and-mailer

multi_agent_news_summarizer_and_mailer/: .gitignore  pyproject.toml
multi_agent_news_summarizer_and_mailer/src/multi_agent_new_summarizer_and_mailer/: crew.py  main.py  report.md
multi_agent_news_summarizer_and_mailer/src/multi_agent_new_summarizer_and_mailer/config/: tasks.yaml
multi_agent_newsletter_summarizer/: README.md
multi_agent_newsletter_summarizer/src/multi_agent_newsletter_summarizer/: crew.py  report.md  token.json
multi_agent_newsletter_summarizer/src/multi_agent_newsletter_summarizer/config/: agents.yaml  tasks.yaml
