[project]
name = "multi_agent_newsletter_summarizer"
version = "0.1.0"
description = "multi-agent-newsletter-summarizer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
multi_agent_newsletter_summarizer = "multi_agent_newsletter_summarizer.main:run"
run_crew = "multi_agent_newsletter_summarizer.main:run"
train = "multi_agent_newsletter_summarizer.main:train"
replay = "multi_agent_newsletter_summarizer.main:replay"
test = "multi_agent_newsletter_summarizer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
